Revert "Update Gallery.css to fix issue with text wrapping"
This reverts commit c9fe784083004f64c1f75b38912a22ebc4805d4e.

--- a/src/pages/Gallery.css
+++ b/src/pages/Gallery.css
@@ -26,14 +26,13 @@
   transform: scale(1.05);
 }
 
-.gallery-image {
+.gallery-item img {
   position: relative;
   border-radius: 5px;
   margin-right: 10px;
   width: 50%;
   height: 150px; /* Adjusted height */
   object-fit: cover;
-
 }
 
 .gallery-text {
@@ -41,7 +40,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  width: 55%;
 }
 
 .gallery-title {
@@ -69,6 +67,5 @@
   display: flex;
   align-items: start;
   padding: 10px;
-  height: 200px;
   /* background-color: beige; */
 }
